[gd_scene load_steps=8 format=3 uid="uid://ch25663i57yed"]

[ext_resource type="Script" uid="uid://foq1ovbo30qd" path="res://scripts/quizmanager.gd" id="1_36y45"]
[ext_resource type="Texture2D" uid="uid://bt6cj1jq8adrm" path="res://images/Quiz_US.png" id="1_w5ac1"]
[ext_resource type="Texture2D" uid="uid://c1n8m3ww55pgj" path="res://images/Quiz_S.png" id="2_m81w7"]
[ext_resource type="Texture2D" uid="uid://cwlh1ge6sbmkw" path="res://images/colours/Header1.png" id="4_bn6h1"]
[ext_resource type="Texture2D" uid="uid://m56qa84flaa0" path="res://images/colours/Header2.png" id="5_t0h63"]
[ext_resource type="Texture2D" uid="uid://21us6yi3m28j" path="res://images/colours/Header3.png" id="6_lcje5"]
[ext_resource type="Texture2D" uid="uid://kj7w7cg67jiy" path="res://images/Home.png" id="9_t0h63"]

[node name="home" type="Node2D"]

[node name="camera" type="Camera2D" parent="."]
zoom = Vector2(0.4, 0.4)

[node name="Buttons" type="Node" parent="."]

[node name="Correct" type="TextureButton" parent="Buttons"]
z_index = 3
offset_left = -450.0
offset_top = -476.0
offset_right = 450.0
offset_bottom = -296.0
texture_normal = ExtResource("1_w5ac1")
texture_hover = ExtResource("2_m81w7")
metadata/_edit_use_anchors_ = true

[node name="Label" type="RichTextLabel" parent="Buttons/Correct"]
z_index = 3
layout_mode = 0
offset_right = 900.0
offset_bottom = 180.0
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 35
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Fake1" type="TextureButton" parent="Buttons"]
z_index = 3
offset_left = -450.0
offset_top = -266.0
offset_right = 450.0
offset_bottom = -86.0
texture_normal = ExtResource("1_w5ac1")
texture_hover = ExtResource("2_m81w7")
metadata/_edit_use_anchors_ = true

[node name="Label" type="RichTextLabel" parent="Buttons/Fake1"]
z_index = 3
offset_right = 900.0
offset_bottom = 180.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 35
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Fake2" type="TextureButton" parent="Buttons"]
z_index = 3
offset_left = -450.0
offset_top = -56.0
offset_right = 450.0
offset_bottom = 124.0
texture_normal = ExtResource("1_w5ac1")
texture_hover = ExtResource("2_m81w7")
metadata/_edit_use_anchors_ = true

[node name="Label" type="RichTextLabel" parent="Buttons/Fake2"]
z_index = 3
offset_right = 900.0
offset_bottom = 180.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 35
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Fake3" type="TextureButton" parent="Buttons"]
z_index = 3
offset_left = -450.0
offset_top = 154.0
offset_right = 450.0
offset_bottom = 334.0
texture_normal = ExtResource("1_w5ac1")
texture_hover = ExtResource("2_m81w7")
metadata/_edit_use_anchors_ = true

[node name="Label" type="RichTextLabel" parent="Buttons/Fake3"]
z_index = 3
offset_right = 900.0
offset_bottom = 180.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 35
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Next" type="TextureButton" parent="Buttons"]
visible = false
z_index = 3
offset_left = 214.0
offset_top = 352.0
offset_right = 1114.0
offset_bottom = 532.0
scale = Vector2(0.25, 0.545)
texture_normal = ExtResource("1_w5ac1")
texture_hover = ExtResource("2_m81w7")
metadata/_edit_use_anchors_ = true

[node name="Label" type="RichTextLabel" parent="Buttons/Next"]
z_index = 3
offset_right = 900.0
offset_bottom = 180.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 130
text = ">"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Text" type="Node" parent="."]

[node name="Title" type="RichTextLabel" parent="Text"]
offset_left = -512.0
offset_top = -1247.0
offset_right = -59.0
offset_bottom = -953.0
theme_override_font_sizes/normal_font_size = 231
text = "RVZ"
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Title2" type="RichTextLabel" parent="Text"]
offset_left = -73.0
offset_top = -1066.0
offset_right = 77.0
offset_bottom = -989.0
theme_override_font_sizes/normal_font_size = 61
text = "V1.0"
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Status" type="RichTextLabel" parent="Text"]
offset_left = -374.0
offset_top = -922.0
offset_right = 517.0
offset_bottom = -845.0
theme_override_font_sizes/normal_font_size = 41
text = "Dashboard ● Biology Paper 1 ● Quiz
"
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Topic" type="RichTextLabel" parent="Text"]
z_index = 2
anchors_preset = -1
anchor_left = 0.00740741
offset_left = -504.0
offset_top = -748.0
offset_right = 494.0
offset_bottom = -672.0
theme_override_font_sizes/normal_font_size = 36
text = "Topic"
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Question" type="RichTextLabel" parent="Text"]
z_index = 3
anchors_preset = -1
anchor_left = 0.00925926
anchor_top = 0.015
anchor_bottom = 0.0283333
offset_left = -498.0
offset_top = -680.0
offset_right = 489.0
offset_bottom = -569.0
theme_override_font_sizes/normal_font_size = 40
text = "ques"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Credits" type="RichTextLabel" parent="Text"]
anchors_preset = -1
offset_left = -513.0
offset_top = 994.0
offset_right = -60.0
offset_bottom = 1288.0
theme_override_font_sizes/normal_font_size = 36
text = "-Bradley"
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Correct" type="RichTextLabel" parent="Text"]
anchors_preset = -1
anchor_top = -0.0266667
anchor_bottom = -0.0266667
offset_left = 453.0
offset_top = -1095.0
offset_right = 606.0
offset_bottom = -977.0
theme_override_colors/default_color = Color(0, 0.921569, 0, 1)
theme_override_font_sizes/normal_font_size = 66
text = "0"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Incorrect" type="RichTextLabel" parent="Text"]
anchors_preset = -1
anchor_top = -0.0266667
anchor_bottom = -0.0266667
offset_left = 455.0
offset_top = -1029.0
offset_right = 608.0
offset_bottom = -911.0
theme_override_colors/default_color = Color(0.262105, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 66
text = "0"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Attempts" type="RichTextLabel" parent="Text"]
anchors_preset = -1
anchor_top = -0.0266667
anchor_bottom = -0.0266667
offset_left = 452.0
offset_top = -1165.0
offset_right = 605.0
offset_bottom = -1047.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 66
text = "0"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Node" type="Node" parent="."]
script = ExtResource("1_36y45")

[node name="Header1" type="Sprite2D" parent="."]
position = Vector2(1.5, -1079)
scale = Vector2(5.415, 1.24)
texture = ExtResource("4_bn6h1")

[node name="Header4" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-4.00002, -709.5)
scale = Vector2(5.02, 0.435)
texture = ExtResource("4_bn6h1")

[node name="Header2" type="Sprite2D" parent="."]
position = Vector2(1, -888)
scale = Vector2(5.42, 0.69)
texture = ExtResource("5_t0h63")

[node name="Header6" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-3, -99)
scale = Vector2(5.03, 5.67)
texture = ExtResource("5_t0h63")

[node name="Header3" type="Sprite2D" parent="."]
position = Vector2(0.49999, 191)
scale = Vector2(5.425, 10.1)
texture = ExtResource("6_lcje5")

[node name="Home" type="Sprite2D" parent="."]
position = Vector2(-425, -887)
scale = Vector2(0.44, 0.44)
texture = ExtResource("9_t0h63")

[node name="Explanation" type="Node2D" parent="."]
visible = false

[node name="Header7" type="Sprite2D" parent="Explanation"]
position = Vector2(-1, 548)
scale = Vector2(5.035, 0.48)
texture = ExtResource("4_bn6h1")

[node name="Header8" type="Sprite2D" parent="Explanation"]
position = Vector2(-1, 837.5)
scale = Vector2(5.035, 2.435)
texture = ExtResource("5_t0h63")

[node name="Title" type="RichTextLabel" parent="Explanation"]
offset_left = -475.0
offset_top = 514.0
offset_right = 493.0
offset_bottom = 614.0
theme_override_font_sizes/normal_font_size = 44
text = "Explanation"
fit_content = true
scroll_active = false

[node name="Explanation" type="RichTextLabel" parent="Explanation"]
offset_left = -488.0
offset_top = 621.0
offset_right = 505.0
offset_bottom = 1051.0
theme_override_font_sizes/normal_font_size = 38
text = "What is 2 + 2?"
fit_content = true
scroll_active = false

[connection signal="pressed" from="Buttons/Correct" to="Node" method="_on_correct_pressed"]
[connection signal="pressed" from="Buttons/Fake1" to="Node" method="_on_fake_1_pressed"]
[connection signal="pressed" from="Buttons/Fake2" to="Node" method="_on_fake_2_pressed"]
[connection signal="pressed" from="Buttons/Fake3" to="Node" method="_on_fake_3_pressed"]
[connection signal="pressed" from="Buttons/Next" to="Node" method="_on_next_pressed"]
